[gd_scene load_steps=24 format=3 uid="uid://cmqjheajo83vx"]

[ext_resource type="Script" uid="uid://cidaxcfpiy05w" path="res://player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://donn0yvei2ely" path="res://art/PlayerBlue_Frame_01_png_processed.png" id="2_onrkg"]
[ext_resource type="Texture2D" uid="uid://ba3hkurqfeo2l" path="res://art/Exhaust_Frame_01_png_processed.png" id="3_dw050"]
[ext_resource type="Texture2D" uid="uid://bipuq2fvmse0p" path="res://art/Exhaust_Frame_02_png_processed.png" id="4_b26j0"]
[ext_resource type="Texture2D" uid="uid://dpwhxxymj5ogg" path="res://art/Exhaust_Frame_03_png_processed.png" id="5_n7ghd"]
[ext_resource type="Texture2D" uid="uid://dtd7rkoodm1ed" path="res://art/Exhaust_Frame_04_png_processed.png" id="6_nvl01"]
[ext_resource type="Texture2D" uid="uid://ecb4k3lxmyjr" path="res://art/Exhaust_Frame_05_png_processed.png" id="7_ivps1"]
[ext_resource type="Texture2D" uid="uid://dov3jb5vlqfte" path="res://art/Exhaust_Frame_06_png_processed.png" id="8_urp6f"]
[ext_resource type="Texture2D" uid="uid://smyhfgyrnf8g" path="res://art/Explosion01_Frame_01_png_processed.png" id="9_op7ga"]
[ext_resource type="Texture2D" uid="uid://bbuuuqq5v41ah" path="res://art/Explosion01_Frame_02_png_processed.png" id="10_q13i1"]
[ext_resource type="Texture2D" uid="uid://csqhe1ahxwnx1" path="res://art/Explosion01_Frame_03_png_processed.png" id="11_pylmc"]
[ext_resource type="Texture2D" uid="uid://cdamkc2rvajpf" path="res://art/Explosion01_Frame_04_png_processed.png" id="12_pbfsw"]
[ext_resource type="Texture2D" uid="uid://ijsmsql6xw5f" path="res://art/Explosion01_Frame_05_png_processed.png" id="13_5tmop"]
[ext_resource type="Texture2D" uid="uid://dlii8tj4tqq86" path="res://art/Explosion01_Frame_06_png_processed.png" id="14_7ahtn"]
[ext_resource type="Texture2D" uid="uid://bth7d3pa538rx" path="res://art/Explosion01_Frame_07_png_processed.png" id="15_7lmhl"]
[ext_resource type="Texture2D" uid="uid://bvwc6u0kpn4vh" path="res://art/Explosion01_Frame_08_png_processed.png" id="16_dx0e4"]
[ext_resource type="Texture2D" uid="uid://c5lf0dray6x3" path="res://art/Explosion01_Frame_09_png_processed.png" id="17_jm5j8"]
[ext_resource type="AudioStream" uid="uid://cih605mgwcup0" path="res://sound/Retro Explosion Long 02.wav" id="18_q13i1"]
[ext_resource type="AudioStream" uid="uid://c6cdr66t5gj6e" path="res://sound/Retro Gun Laser SingleShot 01.wav" id="19_pylmc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_onrkg"]
radius = 30.0
height = 60.0

[sub_resource type="SpriteFrames" id="SpriteFrames_sh265"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_onrkg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_bwjto"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dw050")
}, {
"duration": 1.0,
"texture": ExtResource("4_b26j0")
}, {
"duration": 1.0,
"texture": ExtResource("5_n7ghd")
}, {
"duration": 1.0,
"texture": ExtResource("6_nvl01")
}, {
"duration": 1.0,
"texture": ExtResource("7_ivps1")
}, {
"duration": 1.0,
"texture": ExtResource("8_urp6f")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_dw050"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_op7ga")
}, {
"duration": 1.0,
"texture": ExtResource("10_q13i1")
}, {
"duration": 1.0,
"texture": ExtResource("11_pylmc")
}, {
"duration": 1.0,
"texture": ExtResource("12_pbfsw")
}, {
"duration": 1.0,
"texture": ExtResource("13_5tmop")
}, {
"duration": 1.0,
"texture": ExtResource("14_7ahtn")
}, {
"duration": 1.0,
"texture": ExtResource("15_7lmhl")
}, {
"duration": 1.0,
"texture": ExtResource("16_dx0e4")
}, {
"duration": 1.0,
"texture": ExtResource("17_jm5j8")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="Area2D"]
script = ExtResource("1_onrkg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_onrkg")

[node name="Ship" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_sh265")

[node name="Exhaust" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 34)
sprite_frames = SubResource("SpriteFrames_bwjto")

[node name="Splosion" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_dw050")

[node name="BulletOrigin" type="Marker2D" parent="."]
position = Vector2(0, -35)

[node name="PrimaryWeaponCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_q13i1")

[node name="FireSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("19_pylmc")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="animation_finished" from="Splosion" to="." method="_on_splosion_animation_finished"]
